crates/aven-parser/tests/fixtures/parser/valid/core-expressions.av
identity = (value) => value
message = greet("Aven", identity(name))
print(message)
