crates/aven-parser/tests/fixtures/parser/invalid/unsupported-match-guard.av
value = result ?>
  Ok(value), value > 0 => value
